tests/parser/random/assignment_to_field_of_array.m
[foo(i).x] = 42;
foo(i).x = 42;
